fix(develop_launchpad): fix spacing, adding links to social media img

--- a/src/pages/LaunchPad/css/ProjectsCard.css
+++ b/src/pages/LaunchPad/css/ProjectsCard.css
@@ -248,7 +248,7 @@
 
 .incoming-container .expanding-card {
   position: relative;
-  height: calc(2 * (220px + 20px));
+  height: calc((240px));
   overflow: hidden;
 }
 
@@ -266,7 +266,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 220px;
+  /* height: 220px; */
   background: linear-gradient(transparent, #0e0304);
   z-index: 1;
 }
